--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,14 @@
             <artifactId>spring-boot-starter-validation</artifactId>
             <version>3.4.4</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.12.6</version>
+        </dependency>
+
     </dependencies>
 
     <build>
